fix(ui): prevent table overflow in tabs

--- a/src/components/ui/data-table/data-table.module.scss
+++ b/src/components/ui/data-table/data-table.module.scss
@@ -2,6 +2,8 @@
 
 .root {
   width: 100%;
+  min-width: 0;
+  max-width: 100%;
 }
 
 .toolbar {
