--- a/src/components/ui/server-data-table/server-data-table.module.scss
+++ b/src/components/ui/server-data-table/server-data-table.module.scss
@@ -2,6 +2,8 @@
 
 .root {
   width: 100%;
+  min-width: 0;
+  max-width: 100%;
   @include transition-colors;
 
   &[data-loading] {
@@ -72,6 +74,6 @@
 
 @include until("sm") {
   .pagination {
-    justify-content: space-between;
+    justify-content: start;
   }
 }
