--- a/src/components/ui/table/table.module.scss
+++ b/src/components/ui/table/table.module.scss
@@ -3,6 +3,8 @@
 .container {
   position: relative;
   width: 100%;
+  min-width: 0;
+  max-width: 100%;
   overflow-x: auto;
 }
 
