--- a/src/components/ui/tabs/tabs.module.scss
+++ b/src/components/ui/tabs/tabs.module.scss
@@ -2,6 +2,7 @@
 
 .root {
   display: flex;
+  min-width: 0;
   flex-direction: column;
   gap: space(2);
 }
@@ -66,6 +67,7 @@
 
 .content {
   flex: 1;
+  min-width: 0;
   outline: none;
 
   &:focus-visible {
