--- a/src/features/incidents/components/incidents-panel/incidents-panel.module.scss
+++ b/src/features/incidents/components/incidents-panel/incidents-panel.module.scss
@@ -3,6 +3,7 @@
 .root {
   display: flex;
   width: 100%;
+  min-width: 0;
   max-width: rem(1180);
   flex-direction: column;
   gap: space(12);
@@ -61,6 +62,7 @@
 }
 
 .tabs {
+  min-width: 0;
   gap: space(12);
 }
 
