--- a/src/features/incidents/components/incidents-table/incidents-table.module.scss
+++ b/src/features/incidents/components/incidents-table/incidents-table.module.scss
@@ -2,6 +2,7 @@
 
 .root {
   display: grid;
+  min-width: 0;
   gap: space(8);
 }
 
@@ -148,17 +149,14 @@
 
 .table {
   width: 100%;
+  min-width: 0;
   max-width: rem(1180);
 }
 
 @include until("sm") {
-  .header {
-    align-items: flex-start;
-    flex-direction: column;
-  }
 
   .pagination {
-    justify-content: space-between;
+    justify-content: start;
     width: 100%;
   }
 }
